; ModuleID = '/home/carl/AnghaBench/git/extr_fetch-pack.c_iterate_ref_map.c'
source_filename = "/home/carl/AnghaBench/git/extr_fetch-pack.c_iterate_ref_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.ref = type { i32, %struct.ref* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.object_id*)* @iterate_ref_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iterate_ref_map(i8* %0, %struct.object_id* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca %struct.ref**, align 8
  %7 = alloca %struct.ref*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.object_id* %1, %struct.object_id** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.ref**
  store %struct.ref** %9, %struct.ref*** %6, align 8
  %10 = load %struct.ref**, %struct.ref*** %6, align 8
  %11 = load %struct.ref*, %struct.ref** %10, align 8
  store %struct.ref* %11, %struct.ref** %7, align 8
  %12 = load %struct.ref*, %struct.ref** %7, align 8
  %13 = icmp ne %struct.ref* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %24

15:                                               ; preds = %2
  %16 = load %struct.ref*, %struct.ref** %7, align 8
  %17 = getelementptr inbounds %struct.ref, %struct.ref* %16, i32 0, i32 1
  %18 = load %struct.ref*, %struct.ref** %17, align 8
  %19 = load %struct.ref**, %struct.ref*** %6, align 8
  store %struct.ref* %18, %struct.ref** %19, align 8
  %20 = load %struct.object_id*, %struct.object_id** %5, align 8
  %21 = load %struct.ref*, %struct.ref** %7, align 8
  %22 = getelementptr inbounds %struct.ref, %struct.ref* %21, i32 0, i32 0
  %23 = call i32 @oidcpy(%struct.object_id* %20, i32* %22)
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %15, %14
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @oidcpy(%struct.object_id*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
